--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "flowbite": "^1.6.5",
     "framer-motion": "^10.12.2",
+    "react": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0"
   }
